Fix UI on mobile

--- a/public/index.css
+++ b/public/index.css
@@ -13,7 +13,7 @@ input:focus {
 
 .container {
   min-width: fit-content;
-  max-width: 800px;
+  max-width: fit-content;
   margin-left: auto;
   margin-right: auto;
 }
